# mcp-debugger

./: .gitignore  README.md  pyproject.toml
src/mcp_debugger/: __init__.py  __main__.py  app.py  cli.py
src/mcp_debugger/templates/: index.html
src/mcp_toolbelt/: __main__.py  app.py  cli.py  config.py  db.py
src/mcp_toolbelt/templates/: index.html
