[project]
name = "mcp-debugger"
version = "0.1.0"
description = "MCP debugging and inspection tool - like webhook.site for MCP"
requires-python = ">=3.11"
dependencies = [
    "fastapi[all]>=0.115.6,<0.116",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "click>=8.0.0",
    "pyngrok>=7.0.0",
]

[project.scripts]
mcp-debugger = "mcp_debugger.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
